# krabiecdsa-rs

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: avr.yml  cortex_m.yml  coverage.yml  ct_verify.yml  riscv.yml  rust.yml
ct-verify/: .gitignore  Cargo.toml  README.md
ct-verify/ct-ctgrind/: Cargo.toml  Dockerfile  ct-ctgrind.supp
ct-verify/ct-ctgrind/src/: fixtures.rs
ct-verify/ct-driver/: Cargo.toml
ct-verify/ct-driver/src/: main.rs  target.rs
ct-verify/ct-fixtures/: Cargo.toml
ct-verify/ct-fixtures/src/: lib.rs
ct-verify/cyccnt-hardware/: Cargo.toml  README.md  build.rs  krabi-caliper.toml
ct-verify/cyccnt-hardware/src/: main.rs
ct-verify/panic-free-audit/: Cargo.toml
ct-verify/panic-free-audit/src/: lib.rs  neg_controls.rs
ecdsa/: Cargo.toml
ecdsa/src/: lib.rs  tests.rs
ecdsa/tests/: cavp_ecdsa.rs  cross_impl.rs  heap_verify.rs  rfc6979.rs  wycheproof_ecdsa.rs  wycheproof_vectors.rs
footprint/: README.md
footprint/avr/: Cargo.toml  README.md  krabi-caliper.toml  run_suite.py  simavr_wrapper.py
footprint/avr/.cargo/: config.toml
footprint/avr/examples/: baseline.rs  ecdsa_verify.rs
footprint/avr/src/: cyclecount.rs  lib.rs  stack_measurement.rs
footprint/cortex-m/: Cargo.toml  README.md  build.rs  embedded-measure.toml  krabi-caliper.toml  memory_cm0.x  memory_cm3.x  memory_f407.x  run_suite.py
footprint/cortex-m/.cargo/: config.toml
footprint/cortex-m/examples/: baseline.rs  ecdsa_sign.rs  ecdsa_verify.rs
footprint/cortex-m/src/: cyclecount.rs  lib.rs  stack.rs
footprint/fixtures/: k256.rs  p256.rs  p384.rs
footprint/risc-v/: Cargo.toml  README.md  krabi-caliper.toml  memory.x  qemu_wrapper.py  run_suite.py
footprint/risc-v/examples/: baseline.rs  ecdsa_verify.rs
footprint/risc-v/src/: cyclecount.rs  lib.rs  stack.rs  uart.rs
