[package]
name = "krabiecdsa"
version = "0.1.1"
edition = "2024"
rust-version = "1.87"
description = "ECDSA signature verification for P-256, secp256k1, and P-384 — no_std, no-alloc, generic over the bigint backend via modmath"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/kaidokert/krabiecdsa-rs"
keywords = ["ecdsa", "p256", "secp256k1", "no_std", "embedded"]
categories = ["cryptography", "no-std", "no-std::no-alloc", "embedded"]

[dependencies]
modmath = "0.5"
const-num-traits = { version = "0.2", default-features = false }
signature = { version = "3.0", default-features = false }
zeroize = { version = "1", default-features = false }

[features]
# EXPERIMENTAL, off by default: proof-of-concept ECDSA signing (see the
# `dangerous` module). Not covered by semver and not for production use
# — the name stays `experimental-` until the sign path is constant-time,
# RFC 6979-deterministic, and audited. The no-feature build carries none
# of it and stays verify-only.
experimental-signing = []

[dev-dependencies]
fixed-bigint = { version = "0.5", default-features = false, features = ["cios", "zeroize"] }
sha2 = "0.10"
wycheproof = { version = "0.6", default-features = false, features = ["ecdsa"] }
