cargo-features = ["profile-rustflags"]

[package]
name = "krabiecdsa_footprint_avr"
version = "0.1.0"
edition = "2024"
autobins = false
autotests = false
autobenches = false
publish = false

[features]
baseline = []
# Curve selectors for the unified `ecdsa_verify` example. Pick exactly
# one. (AVR is u8-only; no limb_* feature here.)
curve_p256 = []
curve_k256 = []
curve_p384 = []

[dependencies]
avr-device = { version = "0.7", features = ["atmega2560", "rt"] }
embedded-measure = { version = "0.1.0", features = ["stack", "avr", "ufmt"] }
fixed-bigint = { version = "0.5.0", default-features = false, features = ["zeroize", "use-unsafe", "cios"] }
krabiecdsa = { path = "../../ecdsa" }
ufmt = { version = "0.2" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ravedude-0.2.0"
features = ["arduino-mega2560"]

[profile.dev]
panic = "abort"
lto = "fat"
opt-level = "z"

codegen-units = 1
strip = "none"
debug = "full"
rustflags = ["-Z", "ub-checks=no"]

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[patch.crates-io]
embedded-measure = { path = "../../../embedded-measure" }
