[package]
name = "krabiecdsa_footprint_cortex_m"
version = "0.1.0"
edition = "2024"
autobins = false
autotests = false
autobenches = false
publish = false

[features]
baseline = []
# Curve selectors for the unified `ecdsa_verify` example. Pick exactly one.
curve_p256 = []
curve_k256 = []
curve_p384 = []
# Limb-size selectors. Pick exactly one.
limb_u8 = []
limb_u32 = []

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
krabi-caliper = { version = "0.1.0", features = ["stack", "cortex-m", "semihosting"] }
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }

fixed-bigint = { version = "0.6.0", default-features = false, features = ["zeroize", "use-unsafe", "cios"] }
krabiecdsa = { path = "../../ecdsa", features = ["experimental-signing"] }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(thumbv6m)',
    'cfg(thumbv7m)',
    'cfg(thumbv7em)',
] }

[patch.crates-io]
krabi-caliper = { git = "https://github.com/kaidokert/krabi-caliper-rs", tag = "v0.1.0-alpha.4" }
