[package]
name = "krabiecdsa_footprint_riscv"
version = "0.1.0"
edition = "2024"
autobins = false
autotests = false
autobenches = false
publish = false

[features]
baseline = []
# Curve selectors for the unified `ecdsa_verify` example. Pick exactly one.
curve_p256 = []
curve_k256 = []
curve_p384 = []
# Limb-size selectors. Pick exactly one.
limb_u8 = []
limb_u32 = []

[dependencies]
riscv-rt = "0.13"

fixed-bigint = { version = "0.5.0", default-features = false, features = ["zeroize", "use-unsafe", "cios"] }
krabiecdsa = { path = "../../ecdsa" }

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
